Fixed styles for contextual links wrapping panels displays

--- a/assets/stylesheets/radix-style.css
+++ b/assets/stylesheets/radix-style.css
@@ -10067,7 +10067,13 @@ ul.links.inline li {
   padding: 0;
 }
 
-/* line 152, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 153, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+#content > .contextual-links-region {
+  display: table;
+  margin: 0 auto;
+}
+
+/* line 161, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper {
   position: relative;
   background-color: #FFFFFF;
@@ -10081,20 +10087,20 @@ ul.links.inline li {
   border: 1px solid #DDD;
   padding: 5px;
 }
-/* line 159, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 168, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper > .field-slideshow {
   width: 100% !important;
   padding: 0 !important;
 }
-/* line 162, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 171, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide {
   width: 100% !important;
 }
-/* line 164, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 173, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide img {
   width: 100% !important;
 }
-/* line 167, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 176, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide .field-slideshow-caption {
   background: rgba(0, 0, 0, 0.65);
   position: absolute;
@@ -10103,16 +10109,16 @@ ul.links.inline li {
   width: 100%;
   color: white;
 }
-/* line 174, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 183, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide .field-slideshow-caption .field-slideshow-caption-text {
   display: block;
   padding: 20px;
 }
-/* line 178, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 187, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide .field-slideshow-caption h1, .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide .field-slideshow-caption h2, .field-slideshow-wrapper > .field-slideshow .field-slideshow-slide .field-slideshow-caption h3 {
   margin-top: 0;
 }
-/* line 185, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 194, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-controls a {
   position: absolute;
   z-index: 500;
@@ -10137,19 +10143,19 @@ ul.links.inline li {
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-/* line 203, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 212, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-controls a.next {
   right: 15px;
   left: auto;
 }
-/* line 207, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 216, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-controls a:hover {
   color: white;
   text-decoration: none;
   opacity: 0.9;
   filter: alpha(opacity=90);
 }
-/* line 214, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 223, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-pager {
   margin-top: 10px;
   text-align: center;
@@ -10158,7 +10164,7 @@ ul.links.inline li {
   right: 20px;
   z-index: 500;
 }
-/* line 221, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 230, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-pager a {
   background: #555555;
   border: 3px solid #ffffff;
@@ -10177,28 +10183,28 @@ ul.links.inline li {
   opacity: 0.5;
   filter: alpha(opacity=50);
 }
-/* line 233, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 242, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-pager a:hover {
   color: white;
   text-decoration: none;
   opacity: 0.9;
   filter: alpha(opacity=90);
 }
-/* line 238, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 247, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .field-slideshow-wrapper .field-slideshow-pager a.activeSlide {
   background: #0088cc;
   opacity: 0.9;
   filter: alpha(opacity=90);
 }
 
-/* line 248, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 257, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .progress {
   margin-bottom: 60px;
   overflow: visible;
   height: 40px;
   font-weight: 400;
 }
-/* line 253, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 262, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .progress .bar {
   width: 100%;
   margin: 0 0 5px;
@@ -10211,7 +10217,7 @@ ul.links.inline li {
   -o-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 260, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 269, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .progress .bar .filled {
   height: 40px;
   -webkit-border-radius: 4px;
@@ -10239,21 +10245,21 @@ ul.links.inline li {
   animation: progress-bar-stripes 2s linear infinite;
 }
 
-/* line 280, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 289, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .item-list ul.pagination {
   margin: 20px 0;
 }
-/* line 282, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 291, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .item-list ul.pagination > li {
   margin: 0;
 }
 
-/* line 291, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 300, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 .ctools-dropdown-container hr {
   margin: 0;
 }
 
-/* line 299, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
+/* line 308, ../../extensions/compass_radix/stylesheets/compass_radix/_structure.scss */
 ul.nav,
 ul.navl li,
 ul.dropdown-menu,
